--- a/package.json
+++ b/package.json
@@ -18,15 +18,14 @@
   },
   "homepage": "https://github.com/gunjandatta/sp-event-callout#readme",
   "dependencies": {
-    "gd-sprest": "^1.2.0"
+    "gd-sprest": "*"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-polyfill": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
-    "ts-loader": "^2.0.0",
-    "webpack": "^2.2.1"
+    "babel": "^6.23.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "ts-loader": "^2.3.2",
+    "webpack": "^2.7.0"
   }
 }
