--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Adds a callout to events displayed in a SharePoint calendar.",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -21,11 +21,6 @@
     "gd-sprest": "*"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.1",
-    "ts-loader": "^2.3.2",
-    "webpack": "^2.7.0"
+    "core-js": "^2.5.3"
   }
 }
