--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
     "compilerOptions": {
+        "outDir": "dist",
         "target": "es5"
-    }
+    },
+    "include": [
+        "src/**/*.ts"
+    ]
 }
