--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Adds a callout to events displayed in a SharePoint calendar.",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,11 @@
     "gd-sprest": "*"
   },
   "devDependencies": {
-    "core-js": "^2.5.3"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
+    "core-js": "^2.5.3",
+    "ts-loader": "^2.3.7",
+    "webpack": "^3.11.0"
   }
 }
