--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
   },
   "homepage": "https://github.com/gunjandatta/sp-event-callout#readme",
   "dependencies": {
-    "gd-sprest": "*"
+    "babel-preset-env": "^1.7.0",
+    "gd-sprest": "^4.1.7"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
-    "core-js": "^2.5.3",
-    "ts-loader": "^2.3.7",
-    "webpack": "^3.11.0"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "core-js": "^2.5.7",
+    "ts-loader": "^4.4.2",
+    "webpack": "^4.16.4",
+    "webpack-cli": "^3.1.0"
   }
 }
